--- a/index.html
+++ b/index.html
@@ -21,24 +21,39 @@
                             <h1>Word <span>Racing<i class="fa-solid fa-cars"></i></span></h1>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="button" id="play-again">Play again?</button>
+                            <button class="button" class="play-again">Play again?</button>
                         </div>
                     </div>
                 </header>
                 <section class="game flexbox">
                     <div class="game-input">
-                        <h2>Press any button to <span>start</span>!</h2>
+                        <button class="start-btn">Start</button>
+
                         <div class="random-word">
                             <p></p>
                         </div>
                         <form action="">
                             <input class="user-input" type="text" placeholder="Type word here">
                         </form>
-                            <section class="output"></section>
+                        <section class="output">
+                            <p></p>
+                        </section>
+                        <!-- <div class="arrow-text">
                             <i class="fa-solid fa-arrow-up"></i>
-                        <h2 class="context">Word will be displayed here!</h2>
+                            <h2 class="context">Word will be displayed here!</h2>
+                        </div> -->
+                            
+                        <div class="count-points">
+                            <div class="timer">
+                                <h3>Time: 100</h3>
+                            </div>
+                            <div class="count">
+                                <h3>Points: 0</h3>
+                            </div>
+                        </div>
+                                                    
                     </div>
-                          </section>
+                </section>
             </div>
         </main>
     </body>
