--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         <div class="random-word">
                             <p></p>
                         </div>
+                        <section class="output">
+                            <p>Click <span>start</span> to play!</p>
+                        </section>
                         <form action="">
                             <input class="user-input" type="text" placeholder="Type word here">
                         </form>
-                        <section class="output">
-                            <p></p>
-                        </section>
                         <!-- <div class="arrow-text">
                             <i class="fa-solid fa-arrow-up"></i>
                             <h2 class="context">Word will be displayed here!</h2>
