--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
                             
                         <div class="count-points">
                             <div class="timer">
-                                <h3>Time: 100</h3>
+                                <h3>Time: 60</h3>
                             </div>
                             <div class="count">
                                 <h3>Points: 0</h3>
                             </div>
                         </div>
-                                                    
+                        <section class="win-result">
+                            <div class="result-btn">
+                              <p></p>
+                              <h4></h4>
+                              <button class="button" id="play-again-win"> Play Again? </button>
+                          </div>
+                        </section>                           
                     </div>
                 </section>
             </div>
