working on play again button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <h1>Word <span>Racing<i class="fa-solid fa-cars"></i></span></h1>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="button" class="play-again">Play again?</button>
+                            <button class="play-again-btn">Play again?</button>
                         </div>
                     </div>
                 </header>
@@ -52,11 +52,6 @@
                             </div>
                         </div>
                         <section class="win-result">
-                            <div class="result-btn">
-                              <p></p>
-                              <h4></h4>
-                              <button class="button" id="play-again-win"> Play Again? </button>
-                          </div>
                         </section>                           
                     </div>
                 </section>
