--- a/index.html
+++ b/index.html
@@ -45,13 +45,23 @@
                             
                         <div class="count-points">
                             <div class="timer">
-                                <h3>Time: 60</h3>
+                                <h3>Time: 30</h3>
                             </div>
                             <div class="count">
                                 <h3>Points: 0</h3>
                             </div>
                         </div>
-                        <section class="win-result">
+                        <section class="result-page">
+                            <div class="result-card">
+                                <div class="results">
+                                    <h2>Results!</h2>
+                                    <h3>Date: <span>Wed Nov 30 2022</span></h3>
+                                    <h3>Points: <span></span></h3>
+                                    <h3>Percentage: <span></span></h3>
+                                    <div class="btn-result-wrapper">
+                                    </div>
+                                </div>
+                            </div>
                         </section>                           
                     </div>
                 </section>
