--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <h1>Word <span>Racing<i class="fa-solid fa-cars"></i></span></h1>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="play-again-btn">Play again?</button>
+                            <button class="play-again-btn ">Play again?</button>
                         </div>
                     </div>
                 </header>
@@ -38,20 +38,15 @@
                         <form action="">
                             <input class="user-input" type="text" placeholder="Type word here">
                         </form>
-                        <!-- <div class="arrow-text">
-                            <i class="fa-solid fa-arrow-up"></i>
-                            <h2 class="context">Word will be displayed here!</h2>
-                        </div> -->
-                            
                         <div class="count-points">
                             <div class="timer">
-                                <h3>Time: 30</h3>
+                                <h3>Time: <span>30</span></h3>
                             </div>
                             <div class="count">
-                                <h3>Points: 0</h3>
+                                <h3>Points: <span>0</span></h3>
                             </div>
                         </div>
-                        <section class="result-page">
+                        <section class="result-page hidden">
                             <div class="result-card">
                                 <div class="results">
                                     <h2>Results!</h2>
