--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         </form>
                         <div class="count-points">
                             <div class="timer">
-                                <h3>Time: <span>30</span></h3>
+                                <h3>Time: 30</h3>
                             </div>
                             <div class="count">
-                                <h3>Points: <span>0</span></h3>
+                                <h3>Points: 0</h3>
                             </div>
                         </div>
                         <section class="result-page hidden">
