--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <p></p>
                         </div>
                         <section class="output">
-                            <p>Click <span>start</span> to play!</p>
+                            <p>Click start to play!</p>
                         </section>
                         <form action="">
                             <input class="user-input" type="text" placeholder="Type word here">
