--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <header>
                     <div class="container flexbox">
                         <div class="title">
-                            <h1>Word <span>Racing<i class="fa-solid fa-cars"></i></span></h1>
+                            <h1>Word <span>Racing</span></h1>
                         </div>
                         <div class="btn-wrapper">
                             <button class="play-again-btn ">Play again?</button>
@@ -31,7 +31,7 @@
 
                         <div class="count-points">
                             <div class="timer">
-                                <h3>Time: 30</h3>
+                                <h3><i class="fa-solid fa-clock"></i> 30s</h3>
                             </div>
                             <div class="count">
                                 <h3>Points: 0</h3>
@@ -49,7 +49,7 @@
                         <form action="">
                             <input class="user-input" type="text" placeholder="Type word here">
                         </form>
-                        
+
                         <section class="result-page hidden">
                             <div class="result-card">
                                 <div class="results">
