added some new positioning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="assets/style/style.css" media="screen"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;600&display=swap" rel="stylesheet"> 
         <script src="./assets/script/index.js" type="module"></script>
     </head>
     <body>
@@ -21,18 +24,18 @@
                             <h1>Word <span>Racing</span></h1>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="play-again-btn ">Play again?</button>
+                            <button class="play-again-btn hidden">Play again?</button>
                         </div>
                     </div>
                 </header>
                 <section class="game flexbox">
                     <div class="game-input">
-                        <button class="start-btn">Start</button>
-
+                        
                         <div class="count-points">
                             <div class="timer">
-                                <h3><i class="fa-solid fa-clock"></i> 30s</h3>
+                                <h3><i class="fa-solid fa-clock"></i> 60s</h3>
                             </div>
+                            <button class="start-btn">Start</button>
                             <div class="count">
                                 <h3>Points: 0</h3>
                             </div>
