--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <h1>Word <span>Racing</span></h1>
                         </div>
                         <div class="btn-wrapper">
-                            <button class="play-again-btn hidden">Play again?</button>
+                            <button class="play-again-btn">Play again?</button>
                         </div>
                     </div>
                 </header>
