fixed reset button

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                         <div class="btn-wrapper">
                             <button class="start-btn">Start</button>
                         </div>
-                        
+                                                                    
                         <div class="play-again-wrapper">
-                            <button class="play-again-btn hidden">Play again?</button>
+                            <button class="play-again-btn">Play again?</button>
                         </div>
                     </div>
                 </header>
@@ -68,6 +68,7 @@
                                         <h3>Points: <span></span></h3>
                                         <h3>Percentage: <span></span></h3>
                                         <div class="btn-result-wrapper">
+
                                         </div>
                                     </div>
                                 </div>
